Scenarios/AKS-Secure-Baseline-Private-AVM/Bicep/07-Workload/shoppingDemo/templates/ingress-via-appgw-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-store-front-appgw-external
spec:
  ingressClassName: azure-application-gateway 
  rules:
  - http:
      paths:
      - backend:
          service:
            name: store-front 
            port:
              number: 80
        path: /
        pathType: Prefix
