Scenarios/AKS-Secure-Baseline-Private-AVM/Bicep/07-Workload/shoppingDemo/templates/ingress-via-nginx-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-store-front-nginx-internal
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - backend:
          service:
            name: store-front 
            port:
              number: 80
        path: /
        pathType: Prefix
